--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "gh-pages": "^3.2.3",
     "history": "^5.0.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-redux-form": "^1.16.14",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "reactstrap": "^8.9.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
